# openquant-engine

./: .env.example  .gitignore  Makefile  README.md  index.html  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy-app.yml
api/: __init__.py  main.py  models.py  sanitize.py
api/routers/: money.py  portfolio.py  stock.py
app/: index.html  package-lock.json  package.json  vercel.json
app/src/: App.jsx  index.css
app/src/features/money/: NowOrLaterLab.jsx
app/src/features/portfolio/: DiversificationLab.jsx
app/src/features/stock/: CalibrationPanel.jsx  Conclusion.jsx  FCFHistoryChart.jsx  HeroVerdict.jsx  InsightBox.jsx  MarketBetPanel.jsx  MetricCard.jsx  ModelQualityPanel.jsx  MultiplesCheck.jsx  ReverseChart.jsx  ScenarioCards.jsx  ScenariosWithSliders.jsx  SensitivityTable.jsx  Step.jsx  WACCBreakdown.jsx  WaterfallChart.jsx  WhatYouNeedToBelieve.jsx
app/src/shared/: DisclosureSection.jsx  EPFLCitation.jsx  Glossary.jsx  LearnMore.jsx  LoadingState.jsx  SearchBar.jsx  Term.jsx  api.js  defs.js  explanations.js  useIsMobile.js
assets/: index-BLmFtcuo.css  index-Bw6MBbR1.js  index-CVN82rxa.js
backtest/: analyse.py  batch.py  edgar_historical.py  macro.py  run.py  universe.py
backtest/results/: backtest_2014_2024.csv  calibration_summary.json
deploy/hf/: Dockerfile  README.md
openquant/: config.py
openquant/common/: utils.py
openquant/data/: __init__.py  cache.py  data.py  errors.py  fetcher.py  fixtures.py  models.py
openquant/data/providers/: __init__.py  edgar.py  prices.py
openquant/money/: money.py
openquant/portfolio/: portfolio.py
openquant/valuation/: assumption_diagnostic.py  audit_trail.py  dcf.py  fcf.py  multiples.py  red_flags.py  reverse_dcf.py  sensitivity.py  suitability.py  wacc.py
scripts/: demo_diversification.py
tests/: conftest.py  test_api_payloads.py  test_backtest_analysis.py  test_data.py  test_dcf.py  test_edgar_live.py  test_epfl_exam1.py  test_epfl_exam2.py  test_fcf.py  test_money.py  test_portfolio.py  test_regression_fixes.py  test_utils.py
