[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "openquant-engine"
version = "0.1.0"
description = "A corporate-finance engine pinned to worked exam answers: valuation, risk and portfolio math on real SEC EDGAR filings and market prices."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Alexandre Bevilacqua" }]
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]

# The engine itself. Every version is the one the test suite passes against.
dependencies = [
    "numpy==2.3.4",
    "pandas==2.3.3",
    "requests==2.32.3",
    "scipy==1.16.3",
    "yfinance==1.3.0",
]

[project.optional-dependencies]
# The FastAPI layer that serves the engine over HTTP.
api = [
    "fastapi==0.136.3",
    "uvicorn==0.47.0",
]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "ruff==0.14.5",
    "mypy==1.18.2",
    "types-requests==2.32.4.20250913",
]

[project.urls]
Homepage = "https://github.com/A-bv/openquant-engine"
"Live product" = "https://a-bv.github.io/openquant/"

[tool.setuptools.packages.find]
include = ["openquant*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Default (E4/E7/E9 + F) plus explicit import sorting (I).
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
# Package facades deliberately re-export their submodules' public names.
"**/__init__.py" = ["F401", "F403"]
# data.py is a backward-compat shim: it re-exports moved symbols under section
# banners, so its imports intentionally sit below module-level comments.
"openquant/data/data.py" = ["E402", "F401"]

[tool.mypy]
python_version = "3.11"
files = ["openquant"]
ignore_missing_imports = true
# Pragmatic first pass: catch name/attribute errors and bad calls without
# demanding full annotation coverage on an existing codebase.
check_untyped_defs = true

[tool.pytest.ini_options]
markers = [
    'live: makes real network calls — skipped in normal CI runs (deselect with -m "not live")',
]
